Add NL, ES, DE translations and stats i18n test

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -5,11 +5,13 @@
   "toolbar.auto": "Auto",
   "toolbar.hint": "Hint",
   "toolbar.undo": "Undo",
+  "toolbar.stats": "Stats",
   "toolbar.options.aria": "Show options",
   "toolbar.new.aria": "Start a new game",
   "toolbar.auto.aria": "Auto-complete when safe",
   "toolbar.hint.aria": "Show a hint",
   "toolbar.undo.aria": "Undo last move",
+  "toolbar.stats.aria": "Show stats",
   "status.score": "Score: {value}",
   "status.moves": "Moves: {value}",
   "status.time": "Time: {value}",
@@ -29,11 +31,31 @@
   "options.language": "Language",
   "language.english": "English",
   "language.french": "French",
+  "language.dutch": "Dutch",
+  "language.spanish": "Spanish",
+  "language.german": "German",
   "options.close.aria": "Close options",
   "toast.noMoves": "No moves",
   "toast.stuck": "No moves. Stuck.",
   "toast.noHope": "No hope: proved dead end",
   "toast.noAuto": "No automatic moves available.",
   "toast.autoError": "Auto stopped due to error. See console.",
-  "toast.win": "You win!"
+  "toast.win": "You win!",
+  "stats.title": "Stats",
+  "stats.export": "Export",
+  "stats.import": "Import",
+  "stats.reset": "Reset",
+  "stats.reset.confirm": "Reset all stats?",
+  "stats.close.aria": "Close stats",
+  "stats.played": "Played: {value}",
+  "stats.wins": "Wins: {value}",
+  "stats.winRate": "Win rate: {value}%",
+  "stats.currentStreak": "Current streak: {value}",
+  "stats.bestStreak": "Best streak: {value}",
+  "stats.bestTime": "Best time: {value}",
+  "stats.bestScore": "Best score: {value}",
+  "stats.avgTime": "Avg time: {value}",
+  "stats.avgMoves": "Avg moves: {value}",
+  "stats.avgRecycles": "Avg recycles: {value}",
+  "stats.avgScore": "Avg score: {value}"
 }
