--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -5,11 +5,13 @@
   "toolbar.auto": "Auto",
   "toolbar.hint": "Indice",
   "toolbar.undo": "Annuler",
+  "toolbar.stats": "Stats",
   "toolbar.options.aria": "Afficher les options",
   "toolbar.new.aria": "Commencer une nouvelle partie",
   "toolbar.auto.aria": "Auto-compléter si possible",
   "toolbar.hint.aria": "Afficher un indice",
   "toolbar.undo.aria": "Annuler le dernier coup",
+  "toolbar.stats.aria": "Afficher les stats",
   "status.score": "Score : {value}",
   "status.moves": "Coups : {value}",
   "status.time": "Temps : {value}",
@@ -29,11 +31,31 @@
   "options.language": "Langue",
   "language.english": "Anglais",
   "language.french": "Français",
+  "language.dutch": "Néerlandais",
+  "language.spanish": "Espagnol",
+  "language.german": "Allemand",
   "options.close.aria": "Fermer les options",
   "toast.noMoves": "Aucun coup",
   "toast.stuck": "Aucun coup. Bloqué.",
   "toast.noHope": "Aucun espoir : impasse prouvée",
   "toast.noAuto": "Aucun mouvement automatique disponible.",
   "toast.autoError": "Auto arrêté en raison d'une erreur. Voir la console.",
-  "toast.win": "Victoire !"
+  "toast.win": "Victoire !",
+  "stats.title": "Stats",
+  "stats.export": "Exporter",
+  "stats.import": "Importer",
+  "stats.reset": "Réinitialiser",
+  "stats.reset.confirm": "Réinitialiser toutes les stats ?",
+  "stats.close.aria": "Fermer les stats",
+  "stats.played": "Parties : {value}",
+  "stats.wins": "Victoires : {value}",
+  "stats.winRate": "Taux de victoire : {value} %",
+  "stats.currentStreak": "Série en cours : {value}",
+  "stats.bestStreak": "Meilleure série : {value}",
+  "stats.bestTime": "Meilleur temps : {value}",
+  "stats.bestScore": "Meilleur score : {value}",
+  "stats.avgTime": "Temps moyen : {value}",
+  "stats.avgMoves": "Coups moyens : {value}",
+  "stats.avgRecycles": "Recycles moyens : {value}",
+  "stats.avgScore": "Score moyen : {value}"
 }
